--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <style>
+    /* Works for Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    /* Works for Firefox */
+    input[type="number"] {
+      -moz-appearance: textfield;
+    }
+  </style>
 </head>
 
 <body>
